testdata/bad/colon.ion
// Colon is not a valid operator character.
:
